# PayrollLens

./: .gitignore  README.md  kanban.md
backend/: .env.example  nominaflow.db  pyproject.toml
backend/app/: main.py
backend/app/db/: crud.py  database.py
backend/app/models/: schemas.py
backend/app/routes/: extraction.py  upload.py
backend/app/services/: ocr.py  validator.py
frontend/: package.json
frontend/next-monorepo/: package-lock.json
frontend/next-monorepo/apps/web/: next.config.ts  package.json
frontend/next-monorepo/apps/web/app/: globals.css  layout.tsx  page.tsx
frontend/next-monorepo/apps/web/app/result/[fileId]/: page.tsx
frontend/next-monorepo/apps/web/components/: upload-zone.tsx
