[project]
name =  "nominaflow-backend"
version = "0.1.0"
description = "Backend del extractor inteligente de nóminas"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "python-dotenv>=1.0.0",
    "groq>=0.13.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]